apps/base/minecraft-router/ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: minecraft-router
spec:
  entryPoints:
    - minecraft
  routes:
    - match: HostSNI(`*`)
      services:
        - name: minecraft
          port: 25565
